tests/baselines/reference/multipleExportDefault5.errors.txt
tests/cases/conformance/externalModules/multipleExportDefault5.ts(1,25): error TS2528: A module cannot have multiple default exports.
tests/cases/conformance/externalModules/multipleExportDefault5.ts(2,22): error TS2528: A module cannot have multiple default exports.


==== tests/cases/conformance/externalModules/multipleExportDefault5.ts (2 errors) ====
    export default function bar() { }
                            ~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2753 tests/cases/conformance/externalModules/multipleExportDefault5.ts:2:22: Another export default is here.
    export default class C {}
                         ~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2752 tests/cases/conformance/externalModules/multipleExportDefault5.ts:1:25: The first export default is here.